temporal-verifier/tests/examples/snapshots/fail/sorts/arg_count_mismatch.fly.snap
---
source: temporal-verifier/tests/test_examples.rs
description: "--expect-fail -- verify tests/examples/fail/sorts/arg_count_mismatch.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
sort checking error:
error: function r expected 1 args but found 2 args
  ┌─ tests/examples/fail/sorts/arg_count_mismatch.fly:7:1
  │
7 │ assert forall x:s. r(x, false)
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


