temporal-verifier/tests/examples/snapshots/fail/sorts/assume.fly.snap
---
source: temporal-verifier/tests/test_examples.rs
description: "--expect-fail -- verify tests/examples/fail/sorts/assume.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
sort checking error:
error: expected bool but found s


