temporal-verifier/tests/examples/snapshots/fail/sorts/def_arg_count.fly.snap
---
source: temporal-verifier/tests/test_examples.rs
description: "--expect-fail -- verify tests/examples/fail/sorts/def_arg_count.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
sort checking error:
error: function f expected 2 args but found 1 args
   ┌─ tests/examples/fail/sorts/def_arg_count.fly:10:1
   │
10 │ assert forall x:s, y:s. f(x)
   │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^


