temporal-verifier/tests/examples/snapshots/fail/sorts/def_ret_sort.fly.snap
---
source: temporal-verifier/tests/test_examples.rs
description: "--expect-fail -- verify tests/examples/fail/sorts/def_ret_sort.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
sort checking error:
error: expected s but found bool


