temporal-verifier/tests/examples/snapshots/fail/sorts/empty_calls.fly.snap
---
source: temporal-verifier/tests/test_examples.rs
description: "--expect-fail -- verify tests/examples/fail/sorts/empty_calls.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
sort checking error:
error: x was called but it is not a function/definition
  ┌─ tests/examples/fail/sorts/empty_calls.fly:6:1
  │
6 │ assert x()
  │ ^^^^^^^^^^


