temporal-verifier/tests/examples/snapshots/fail/sorts/imm_vs_mut.fly.snap
---
source: tests/test_examples.rs
description: "--expect-fail -- verify tests/examples/fail/sorts/imm_vs_mut.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
sort checking error:
error: could not unify s and bool


